--- a/package.json
+++ b/package.json
@@ -1,49 +1,52 @@
 {
-  "name": "quinvo-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@nextui-org/react": "^2.2.9",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@reduxjs/toolkit": "^2.0.1",
-    "axios": "^1.6.6",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "framer-motion": "^10.18.0",
-    "lucide-react": "^0.314.0",
-    "next": "14.1.0",
-    "next-nprogress-bar": "^2.1.2",
-    "next-themes": "^0.2.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-form-stepper": "^2.0.3",
-    "react-icons": "^5.0.1",
-    "react-input-verification-code": "^1.0.2",
-    "react-redux": "^9.1.0",
-    "react-step-wizard": "^5.3.11",
-    "react-use-wizard": "^2.2.4",
-    "styled-components": "^6.1.8",
-    "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "name": "quinvo-app",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "export": "next export",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@nextui-org/react": "^2.2.9",
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-label": "^2.0.2",
+        "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-toast": "^1.1.5",
+        "@reduxjs/toolkit": "^2.0.1",
+        "axios": "^1.6.6",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.0",
+        "framer-motion": "^10.18.0",
+        "live-server": "^1.2.2",
+        "lucide-react": "^0.314.0",
+        "next": "14.1.0",
+        "next-nprogress-bar": "^2.1.2",
+        "next-themes": "^0.2.1",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-form-stepper": "^2.0.3",
+        "react-icons": "^5.0.1",
+        "react-input-verification-code": "^1.0.2",
+        "react-redux": "^9.1.0",
+        "react-step-wizard": "^5.3.11",
+        "react-use-wizard": "^2.2.4",
+        "sharp": "^0.33.2",
+        "styled-components": "^6.1.8",
+        "tailwind-merge": "^2.2.0",
+        "tailwindcss-animate": "^1.0.7"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "autoprefixer": "^10.4.17",
+        "eslint": "^8",
+        "eslint-config-next": "14.1.0",
+        "postcss": "^8.4.33",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
+    }
 }
